--- a/Solution/ActivityLauncher.Client/Locales/CommonLocales.en.resx
+++ b/Solution/ActivityLauncher.Client/Locales/CommonLocales.en.resx
@@ -117,148 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Components.FolderPickerInput.Error" xml:space="preserve">
-    <value>Vous devez choisir un dossier valide.</value>
-  </data>
-  <data name="Dashboard.CreateWorkspaceButton" xml:space="preserve">
-    <value>Ajouter</value>
-  </data>
-  <data name="Dashboard.Description" xml:space="preserve">
-    <value>Créez et modifiez vos espaces de travail depuis cette page.</value>
-  </data>
-  <data name="Dashboard.Title" xml:space="preserve">
-    <value>Espaces de travail</value>
-  </data>
-  <data name="Errors.CreateWorkspace" xml:space="preserve">
-    <value>Une erreur est survenue lors de la création de l'espace de travail</value>
-  </data>
-  <data name="Errors.DeleteWorkspace" xml:space="preserve">
-    <value>Une erreur est survenue lors de la suppression de l'espace de travail</value>
-  </data>
-  <data name="Errors.DuplicateWorkspace" xml:space="preserve">
-    <value>Une erreur est survenue lors de la duplication de l'espace de travail</value>
-  </data>
-  <data name="Errors.GetWorkspaces" xml:space="preserve">
-    <value>Une erreur est survenue à la récupération des espaces de travail</value>
-  </data>
-  <data name="Errors.RunWorkspaceScript" xml:space="preserve">
-    <value>Une erreur est survenue à l'exécution du script</value>
-  </data>
-  <data name="Errors.UpdateWorkspace" xml:space="preserve">
-    <value>Une erreur est survenue lors de la mise à jour de l'espace de travail</value>
+  <data name="FolderPickerInput.Error" xml:space="preserve">
+    <value>You must choose a valid existing folder.</value>
   </data>
   <data name="GlobalError.Button" xml:space="preserve">
-    <value>Recharger l'application</value>
+    <value>Refresh the application</value>
   </data>
   <data name="GlobalError.Message" xml:space="preserve">
-    <value>Une erreur inconnue est survenue, veuillez réessayer plus tard ou </value>
+    <value>An unhandled error occurred, please try again or</value>
   </data>
   <data name="GlobalError.Message.Link" xml:space="preserve">
-    <value>signaler le bug sur GitHub</value>
+    <value>signal the issue on GitHub</value>
   </data>
   <data name="GlobalError.Title" xml:space="preserve">
-    <value>Cette application ne se sent pas bien...</value>
+    <value>This application doesn't feel well...</value>
   </data>
   <data name="Navigation.Configuration" xml:space="preserve">
-    <value>Paramètres</value>
+    <value>Configuration</value>
   </data>
-  <data name="Navigation.Dashboards" xml:space="preserve">
-    <value>Espaces de travail</value>
+  <data name="Navigation.Activities" xml:space="preserve">
+    <value>Activities</value>
   </data>
-  <data name="Notifications.CreateWorkspace" xml:space="preserve">
-    <value>L'espace de travail a bien été créé</value>
-  </data>
-  <data name="Notifications.DeleteWorkspace" xml:space="preserve">
-    <value>L'espace de travail a bien été supprimé</value>
-  </data>
-  <data name="Notifications.DuplicateWorkspace" xml:space="preserve">
-    <value>L'espace de travail a bien été dupliqué</value>
-  </data>
-  <data name="Notifications.RunWorkspaceScript" xml:space="preserve">
-    <value>Le script a bien été exécuté</value>
-  </data>
-  <data name="Notifications.UpdateWorkspace" xml:space="preserve">
-    <value>L'espace de travail a bien été mis à jour</value>
-  </data>
-  <data name="Workspace.Card.DeleteMenu" xml:space="preserve">
-    <value>Supprimer</value>
-  </data>
-  <data name="Workspace.Card.DuplicateMenu" xml:space="preserve">
-    <value>Dupliquer</value>
-  </data>
-  <data name="Workspace.Card.EditMenu" xml:space="preserve">
-    <value>Modifier</value>
-  </data>
-  <data name="Workspace.Dialog.CancelButton" xml:space="preserve">
-    <value>Annuler</value>
-  </data>
-  <data name="Workspace.Dialog.Create.SubmitButton" xml:space="preserve">
-    <value>Ajouter</value>
-  </data>
-  <data name="Workspace.Dialog.Create.Title" xml:space="preserve">
-    <value>Créer un nouvel espace de travail</value>
-  </data>
-  <data name="Workspace.Dialog.Delete.CancelButton" xml:space="preserve">
-    <value>Annuler</value>
-  </data>
-  <data name="Workspace.Dialog.Delete.ConfirmButton" xml:space="preserve">
-    <value>Supprimer</value>
-  </data>
-  <data name="Workspace.Dialog.Delete.Message" xml:space="preserve">
-    <value>Voulez-vous vraiment supprimer l'espace de travail "{0}" ? Cette action est définitive.</value>
-  </data>
-  <data name="Workspace.Dialog.Delete.Title" xml:space="preserve">
-    <value>Supprimer l'espace de travail</value>
-  </data>
-  <data name="Workspace.Dialog.Description.Label" xml:space="preserve">
-    <value>Description</value>
-  </data>
-  <data name="Workspace.Dialog.Edit.SubmitButton" xml:space="preserve">
-    <value>Sauvegarder</value>
-  </data>
-  <data name="Workspace.Dialog.Edit.Title" xml:space="preserve">
-    <value>Modifier l'espace de travail</value>
-  </data>
-  <data name="Workspace.Dialog.Name.Label" xml:space="preserve">
-    <value>Nom</value>
-  </data>
-  <data name="Workspace.Dialog.Name.RequiredError" xml:space="preserve">
-    <value>L'espace de travail doit avoir un nom !</value>
-  </data>
-  <data name="Workspace.Duplicate.Name" xml:space="preserve">
-    <value>Copie de {0}</value>
-  </data>
-  <data name="Workspace.Script.RunButton" xml:space="preserve">
-    <value>Exécuter le script</value>
-  </data>
-  <data name="Workspace.Script.Highlight.Label" xml:space="preserve">
-    <value>Style code</value>
-  </data>
-  <data name="Workspace.Script.StartChevron.Label" xml:space="preserve">
-    <value>Chevron en début de ligne</value>
-  </data>
-  <data name="Workspace.Script.Title" xml:space="preserve">
-    <value>Script PowerShell de {0}</value>
-  </data>
-  <data name="Workspace.Dialog.Run.CancelButton" xml:space="preserve">
-    <value>Annuler</value>
-  </data>
-  <data name="Workspace.Dialog.Run.ConfirmButton" xml:space="preserve">
-    <value>Exécuter</value>
-  </data>
-  <data name="Workspace.Dialog.Run.Message" xml:space="preserve">
-    <value>Êtes-vous sûr de vouloir exécuter le script PowerShell généré ? Aucune vérification automatique n'a été faite, il est donc recommandé de faire une revue manuelle du script avant son exécution afin de s'assurer qu'aucun problème ne puisse survenir à l'exécution.</value>
-  </data>
-  <data name="Workspace.Dialog.Run.ReviewScript" xml:space="preserve">
-    <value>Vérifier le script</value>
-  </data>
-  <data name="Workspace.Dialog.Run.Title" xml:space="preserve">
-    <value>Exécuter le script {0}</value>
-  </data>
-  <data name="Workspace.Card.OpenScriptTooltip" xml:space="preserve">
-    <value>Ouvrir le script</value>
-  </data>
-  <data name="Workspace.Dialog.View.Description" xml:space="preserve">
-    <value>Description</value>
+  <data name="App.Title" xml:space="preserve">
+    <value>Activity Launcher for Windows</value>
   </data>
 </root>
