--- a/Solution/ActivityLauncher.Client/Locales/CommonLocales.fr.resx
+++ b/Solution/ActivityLauncher.Client/Locales/CommonLocales.fr.resx
@@ -117,49 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Errors.EmptyFileStorage" xml:space="preserve">
-    <value>Veuillez choisir un dossier pour la sauvegarde des données de l'application !</value>
+  <data name="FolderPickerInput.Error" xml:space="preserve">
+    <value>Vous devez choisir un dossier valide.</value>
   </data>
-  <data name="Errors.InvalidFileStorage" xml:space="preserve">
-    <value>Veuillez choisir un dossier existant pour la sauvegarde des données de l'application !</value>
+  <data name="GlobalError.Button" xml:space="preserve">
+    <value>Recharger l'application</value>
   </data>
-  <data name="FileStorage.FolderPicker.Label" xml:space="preserve">
-    <value>Choisir un dossier</value>
+  <data name="GlobalError.Message" xml:space="preserve">
+    <value>Une erreur inconnue est survenue, veuillez réessayer plus tard ou </value>
   </data>
-  <data name="FileStorage.Help" xml:space="preserve">
-    <value>L'application utilisera le dossier selectionné pour y sauvegarder les données créées dans l'application (comme les espaces de travail)</value>
+  <data name="GlobalError.Message.Link" xml:space="preserve">
+    <value>signaler le bug sur GitHub</value>
   </data>
-  <data name="FileStorage.Label" xml:space="preserve">
-    <value>Dossier de stockage des données de l'application (requis)</value>
+  <data name="GlobalError.Title" xml:space="preserve">
+    <value>Cette application ne se sent pas bien...</value>
   </data>
-  <data name="Language.English" xml:space="preserve">
-    <value>English</value>
-  </data>
-  <data name="Language.French" xml:space="preserve">
-    <value>Français</value>
-  </data>
-  <data name="Language.Label" xml:space="preserve">
-    <value>Langue</value>
-  </data>
-  <data name="ResetButton" xml:space="preserve">
-    <value>Réinitialiser</value>
-  </data>
-  <data name="SaveButton" xml:space="preserve">
-    <value>Enregistrer</value>
-  </data>
-  <data name="Theme.Dark" xml:space="preserve">
-    <value>Sombre</value>
-  </data>
-  <data name="Theme.Label" xml:space="preserve">
-    <value>Thème</value>
-  </data>
-  <data name="Theme.Light" xml:space="preserve">
-    <value>Clair</value>
-  </data>
-  <data name="Title" xml:space="preserve">
+  <data name="Navigation.Configuration" xml:space="preserve">
     <value>Paramètres</value>
   </data>
-  <data name="WelcomeMessage" xml:space="preserve">
-    <value>Bienvenue dans Fast Workspace ! Veuillez configurer l'application avant de pouvoir mettre en place vos espaces de travail.</value>
+  <data name="Navigation.Activities" xml:space="preserve">
+    <value>Activités</value>
+  </data>
+  <data name="App.Title" xml:space="preserve">
+    <value>Activity Launcher pour Windows</value>
   </data>
 </root>
